// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receipts.update > functionality > update currency code 1`] = `
{
  "updated": {
    "receipts": {
      "id:7d9b1e24-9ce5-43c6-a4fc-9e11f08dc0d6": {
        "currencyCode": "NZD",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receipts.update > functionality > update issued 1`] = `
{
  "updated": {
    "receipts": {
      "id:8837e103-a58d-400f-83af-de1ccab1e158": {
        "issued": "2020-06-01",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receipts.update > functionality > update name 1`] = `
{
  "updated": {
    "receipts": {
      "id:1f13ba3f-43a6-45b5-8300-0477beaa45b9": {
        "name": "blanditiis iste dolorem",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;
